tests/positive/issue1333/M.juvix
module M;

type T (A : Type) := c : T _;

open T using {c} public;
