tests/negative/Internal/WrongReturnTypeTooFewArguments.juvix
module WrongReturnTypeTooFewArguments;

type A (B : Type) :=
  | c : A;

